[feat] add get image to faq and notice
