# eTest/src/main/java/com/tmax/eTest/Support/faq/controller/FaqController.java
@@ -5,9 +5,17 @@ import com.tmax.eTest.Support.faq.service.FaqService;
 import com.tmax.eTest.Auth.dto.CMRespDto;
 import com.tmax.eTest.Common.model.support.FAQ;
 import lombok.RequiredArgsConstructor;
+import org.apache.tika.Tika;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.Resource;
+import org.springframework.data.repository.query.Param;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.io.IOException;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 @RestController
@@ -15,6 +23,25 @@ import java.util.List;
 @RequestMapping("master")
 public class FaqController {
     private final FaqService faqService;
+
+    @Value("${file.path}")
+    private String rootPath;
+
+    @GetMapping(value = "/faq/image")
+    public ResponseEntity<Resource> getFaqImage(@Param("fileName")String fileName ) {
+        HttpHeaders header = new HttpHeaders();
+        Path imageUrl = Paths.get(rootPath + "/faq/" + fileName);
+
+        Tika tika = new Tika();
+        String mimeType;
+        try {
+            mimeType = tika.detect(imageUrl);
+            header.add("Content-Type", mimeType);
+        } catch (IOException e) {
+            throw new IllegalArgumentException("mime type error");
+        }
+        return faqService.getFaqImage(fileName);
+    }
 
     /**
      * 자주 묻는 질문 생성
