# eTest/src/main/java/com/tmax/eTest/Support/notice/controller/NoticeController.java
@@ -5,9 +5,17 @@ import com.tmax.eTest.Support.notice.service.NoticeService;
 import com.tmax.eTest.Auth.dto.CMRespDto;
 import com.tmax.eTest.Common.model.support.Notice;
 import lombok.RequiredArgsConstructor;
+import org.apache.tika.Tika;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.Resource;
+import org.springframework.data.repository.query.Param;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.io.IOException;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 @RestController
@@ -15,6 +23,25 @@ import java.util.List;
 @RequestMapping("master")
 public class NoticeController {
     private final NoticeService noticeService;
+
+    @Value("${file.path}")
+    private String rootPath;
+
+    @GetMapping(value = "/notice/image")
+    public ResponseEntity<Resource> getNoticeImage(@Param("fileName")String fileName ) {
+        HttpHeaders header = new HttpHeaders();
+        Path imageUrl = Paths.get(rootPath + "/notice/" + fileName);
+
+        Tika tika = new Tika();
+        String mimeType;
+        try {
+            mimeType = tika.detect(imageUrl);
+            header.add("Content-Type", mimeType);
+        } catch (IOException e) {
+            throw new IllegalArgumentException("mime type error");
+        }
+        return noticeService.getNoticeImage(fileName);
+    }
 
     /**
      * 공지사항 생성
